# flashcards

./: LICENSE  README.md  __main__.py  deck.py  pyproject.toml  serializer.py
src/flashcards/: __main__.py  cli.py
src/flashcards/data/: serializer.py  test.py
src/flashcards/gui/: cards.py  navigation.py
src/flashcards/viewmodels/: deck.py
